[tool.poetry]
name = "cuddly-train"
version = "0.1.0"
description = ""
authors = ["James Dearlove <jamesdearlove@outlook.com>"]
readme = "README.md"
packages = [{include = "cuddly_train"}]

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
